objects/SNPS_Employee_Agreement_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Access_Expiration_Date__c</fullName>
        <formula>NDA_SNPS_Cadence_Authorized_Employees__r.Access_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Access Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EmployeeID__c</fullName>
        <formula>NDA_SNPS_Cadence_Authorized_Employees__r.User__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmployeeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <formula>NDA_SNPS_Cadence_Authorized_Employees__r.User__r.FirstName + &apos; &apos; + NDA_SNPS_Cadence_Authorized_Employees__r.User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Access_Date__c</fullName>
        <formula>NDA_SNPS_Cadence_Authorized_Employees__r.Last_Access_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Access Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NDA_SNPS_Cadence_Authorized_Employees__c</fullName>
        <label>NDA SNPS Cadence Authorized Employees</label>
        <referenceTo>NDA_SNPS_Cadence_Authorized_Employees__c</referenceTo>
        <relationshipLabel>SNPS Employee Agreement Relationship</relationshipLabel>
        <relationshipName>SNPS_Employee_Agreement_Relationship</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Never_Accessed__c</fullName>
        <formula>NDA_SNPS_Cadence_Authorized_Employees__r.Never_Accessed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Never Accessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>NDA SNPS Cadence Authorized Employees</relationshipLabel>
        <relationshipName>SNPS_Employee_Agreement_Relationship</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Update_Access_Date__c</fullName>
        <formula>NDA_SNPS_Cadence_Authorized_Employees__r.Update_Access_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Update Access Date</label>
        <type>Text</type>
    </fields>
    <label>SNPS Employee Agreement Relationship</label>
    <nameField>
        <displayFormat>Employee {0000}</displayFormat>
        <label>SNPS Employee Agreement Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SNPS Employee Agreement Relationship</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>